# vaultkey

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  release.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
examples/: random_passwords.rs
src/: builder.rs  constants.rs  error.rs  lib.rs  options.rs
